tests/__snapshots__/config-failFast-overrides-failFast-true-stderr.snap.txt
Error: Type is 'number'.

  1 | import { expect, test } from "tstyche";
  2 | test("is number?", () => {
  3 |   expect<number>().type.not.toBeNumber();
    |                             ~~~~~~~~~~
  4 |   expect<number>().type.not.toBeNumber();
  5 | });
  6 | 

      at ./__typetests__/isNumber.tst.ts:3:29 ❭ is number?

Error: Type is 'number'.

  2 | test("is number?", () => {
  3 |   expect<number>().type.not.toBeNumber();
  4 |   expect<number>().type.not.toBeNumber();
    |                             ~~~~~~~~~~
  5 | });
  6 | 

      at ./__typetests__/isNumber.tst.ts:4:29 ❭ is number?

Error: Type is 'string'.

  1 | import { expect, test } from "tstyche";
  2 | test("is string?", () => {
  3 |   expect<string>().type.not.toBeString();
    |                             ~~~~~~~~~~
  4 |   expect<string>().type.not.toBeString();
  5 | });
  6 | 

      at ./__typetests__/isString.tst.ts:3:29 ❭ is string?

Error: Type is 'string'.

  2 | test("is string?", () => {
  3 |   expect<string>().type.not.toBeString();
  4 |   expect<string>().type.not.toBeString();
    |                             ~~~~~~~~~~
  5 | });
  6 | 

      at ./__typetests__/isString.tst.ts:4:29 ❭ is string?

